SourceMetaData/src/objects/External_ID__c.object
<CustomObject>
    <description>List of external ID references against tickets. e.g. a ticket may want to reference a particular record in a 3rd party environmental system.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_System__c</fullName>
        <inlineHelpText>System to reference.</inlineHelpText>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>Confirm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iBuild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iWorld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ohms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sostenuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trio/Protocol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebPay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ticket__c</fullName>
        <label>Ticket</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>External IDs</relationshipLabel>
        <relationshipName>External_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>External ID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ext{000000}</displayFormat>
        <label>External ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>